tests/compile_fail/invalid_style_diagnostic_literal.stderr
error[E0451]: fields `kind`, `subject`, `source` and `reason` of struct `StyleDiagnostic` are private
  --> tests/compile_fail/invalid_style_diagnostic_literal.rs:8:9
   |
 7 |     let _diagnostic = StyleDiagnostic {
   |                       --------------- in this type
 8 |         kind: StyleDiagnosticKind::InvalidAtComputedValue,
   |         ^^^^ private field
 9 |         subject: StyleDiagnosticSubject::Property(Property::Color),
   |         ^^^^^^^ private field
10 |         source: None,
   |         ^^^^^^ private field
11 |         reason: InvalidAtComputedValueReason::MissingTypedCustomPropertyValue(
   |         ^^^^^^ private field
